--- a/commercial-dashboard.html
+++ b/commercial-dashboard.html
@@ -213,7 +213,14 @@ async function loadPortfolio(){
 }
 
 function normalizeTicker(t){ return t==='BITCOIN' ? 'BTC' : t; }
-function classify(t){ t=normalizeTicker(t); if (CRYPTO_SET.has(t)) return 'CRIPTO'; if (['IVV','SCHD'].includes(t)) return 'ETF EUA'; return t.endsWith('11') ? 'FII' : 'AÇÃO'; }
+const STOCK11_OVERRIDES = new Set(['KLBN11','TAEE11']);
+function classify(t){
+  t=normalizeTicker(t);
+  if (CRYPTO_SET.has(t)) return 'CRIPTO';
+  if (['IVV','SCHD'].includes(t)) return 'ETF EUA';
+  if (STOCK11_OVERRIDES.has(t)) return 'AÇÃO';
+  return t.endsWith('11') ? 'FII' : 'AÇÃO';
+}
 function canonicalClass(asset){
   // Sempre recalcula pela regra do ticker para evitar classe antiga errada salva em sessões passadas
   return classify(asset.ticker);
