fix(bitdash): restaurar botões de notícias/PVP e cadastro

--- a/commercial-auth.html
+++ b/commercial-auth.html
@@ -22,9 +22,11 @@ button{background:#1b2d5e;color:#fff;border:1px solid #3d58a6;border-radius:9px;
   <div id="status" class="muted" style="margin-top:10px;"></div>
 </div>
 <script>
-const API = `http://${location.hostname}:3001`;
+const API = `${location.protocol}//${location.hostname}:3001`;
 const statusEl=document.getElementById('status');
 const emailEl=document.getElementById('email');
+const params = new URLSearchParams(location.search);
+emailEl.value = params.get('email') || '';
 const passEl=document.getElementById('pass');
 const paidEl=document.getElementById('paid');
 
