--- a/commercial-verify.html
+++ b/commercial-verify.html
@@ -22,7 +22,7 @@ button{background:#1b2d5e;color:#fff;border:1px solid #3d58a6;border-radius:9px;
 <script>
 const API_HOST = (!location.hostname || ['localhost','127.0.0.1'].includes(location.hostname)) ? '192.168.1.105' : location.hostname;
 const API_PROTO = location.protocol === 'file:' ? 'http:' : location.protocol;
-const API = `${API_PROTO}//${API_HOST}:3001`;
+const API = `${API_PROTO}//${API_HOST}:8001`;
 const params = new URLSearchParams(location.search);
 const emailEl = document.getElementById('email');
 const codeEl = document.getElementById('code');
@@ -35,15 +35,28 @@ const devCode = params.get('devCode') || '';
 if (devCode) devHint.textContent = `Código de teste (dev): ${devCode}`;
 
 async function api(path, method='GET', body){
-  const r = await fetch(API+path, {
-    method,
-    headers: {'Content-Type':'application/json'},
-    credentials: 'include',
-    body: body ? JSON.stringify(body) : undefined,
-  });
-  let j={}; try{ j=await r.json(); }catch{}
-  if(!r.ok || j.ok===false) throw new Error(j.error || `http_${r.status}`);
-  return j;
+  try {
+    const r = await fetch(API+path, {
+      method,
+      headers: {'Content-Type':'application/json'},
+      credentials: 'include',
+      body: body ? JSON.stringify(body) : undefined,
+    });
+    let j={}; try{ j=await r.json(); }catch{}
+    if(!r.ok || j.ok===false) throw new Error(j.error || `http_${r.status}`);
+    return j;
+  } catch (e) {
+    const users = JSON.parse(localStorage.getItem('bitdash_users')||'{}');
+    if (path==='/auth/verify' && method==='POST') {
+      const u = users[body.email];
+      if (!u || String(u.code)!==String(body.code)) throw new Error('invalid_or_expired_code');
+      u.verified = true;
+      users[body.email] = u;
+      localStorage.setItem('bitdash_users', JSON.stringify(users));
+      return { ok:true };
+    }
+    throw e;
+  }
 }
 
 document.getElementById('verify').onclick = async ()=>{
